--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         <activity
             android:name=".ui.main.MainActivity"
             android:label="@string/app_name"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.MoneytreeLight.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
